chat_system/log
g++ -o ChatServer ChatServer.cc -std=c++11 -static -I./lib/include -L./lib/lib -ljsoncpp
In file included from ChatServer.cc:1:0:
ChatServer.hpp: In member function ‘void ChatServer::Start()’:
ChatServer.hpp:187:20: error: ‘new_sock’ was not declared in this scope
                 if(new_sock < 0){
                    ^
ChatServer.hpp:191:17: error: ‘pthread_id’ was not declared in this scope
                 pthread_id tid;
                 ^
ChatServer.hpp:191:28: error: expected ‘;’ before ‘tid’
                 pthread_id tid;
                            ^
ChatServer.hpp:193:33: error: ‘tid’ was not declared in this scope
                 pthread_create(&tid, NULL, HandlerNewClient, (void *)conn_);
                                 ^
ChatServer.cc: In function ‘int main(int, char**)’:
ChatServer.cc:16:12: error: ‘class ChatServer’ has no member named ‘Stert’
     serp_->Stert();
            ^
make: *** [ChatServer] Error 1
